--- a/Week4/FastAPI - Python.ipynb
+++ b/Week4/FastAPI - Python.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "'\\n<data type>\\ncost : integer\\ntax_percent : float\\nusername = \"Codingwithroby\" : string\\n'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "'\\n이렇게 쓰기\\n'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1657,21 +1657,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'grade_average_service'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\sykan\\Desktop\\FBA Quant\\Quant Development\\new repository\\SQL_Bootcamp\\Week4\\FastAPI - Python.ipynb 셀 98\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sykan/Desktop/FBA%20Quant/Quant%20Development/new%20repository/SQL_Bootcamp/Week4/FastAPI%20-%20Python.ipynb#Y166sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#As로 이름바꾸기\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/sykan/Desktop/FBA%20Quant/Quant%20Development/new%20repository/SQL_Bootcamp/Week4/FastAPI%20-%20Python.ipynb#Y166sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgrade_average_service\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mgrade_service\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'grade_average_service'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#As로 이름바꾸기\n",
     "import grade_average_service as grade_service"
@@ -1679,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1688,7 +1676,7 @@
        "'c:\\\\Users\\\\sykan\\\\Desktop\\\\FBA Quant\\\\Quant Development\\\\new repository\\\\SQL_Bootcamp\\\\Week4'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1707,19 +1695,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Water\n",
-      "4\n",
-      "8.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import standardlibrary"
    ]
@@ -1818,6 +1796,7 @@
     "        self.last_name = last_name\n",
     "        self.major = major\n",
     "\n",
+    "    #class method\n",
     "    def fullname_with_major(self):\n",
     "        return f'{self.first_name} {self.last_name} is a '\\\n",
     "               f'{self.major} major!'\n",
@@ -1830,7 +1809,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# making instance -> 변수 값 삽입\n",
+    "# making instance -> 변수 값 바로 삽입\n",
     "student_1 = Student('Eric','Roby','Computer Science')\n",
     "student_2 = Student('John','Miller','Math')"
    ]
@@ -1890,6 +1869,7 @@
     "        self.last_name = last_name\n",
     "        self.major = major\n",
     "\n",
+    "        # new student가 만들어질 때마다 number_of_students 1씩 추가\n",
     "        Student.number_of_students += 1\n",
     "\n",
     "    def fullname_with_major(self):\n",
@@ -1900,6 +1880,8 @@
     "        return f'{self.first_name} {self.last_name} is a '\\\n",
     "               f'{self.major} major going to {self.school}'\n",
     "    \n",
+    "    #decorator\n",
+    "    # new_school인자를 받으면 그 인자가 class 내의 school 변수가 됨\n",
     "    @classmethod\n",
     "    def set_online_school(cls, new_school):\n",
     "        cls.school = new_school\n",
@@ -1908,6 +1890,14 @@
     "    def split_students(cls, student_str):\n",
     "        first_name, last_name, major = student_str.split('.')\n",
     "        return cls(first_name, last_name, major)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decorator\n",
+    "기존 함수를 변경하지 않으면서 함수에 기능을 추가할 수 있게 해주는 도구"
    ]
   },
   {
@@ -1936,7 +1926,9 @@
     "\n",
     "\n",
     "print(student_1.school)\n",
-    "print(student_2.school)"
+    "print(student_2.school)\n",
+    "\n",
+    "Student.set_online_school"
    ]
   },
   {
@@ -1987,25 +1979,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "CollegeStudent() takes no arguments",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\sykan\\Desktop\\FBA Quant\\Quant Development\\new repository\\SQL_Bootcamp\\Week4\\FastAPI - Python.ipynb 셀 117\u001b[0m in \u001b[0;36m<cell line: 13>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/sykan/Desktop/FBA%20Quant/Quant%20Development/new%20repository/SQL_Bootcamp/Week4/FastAPI%20-%20Python.ipynb#Y221sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mCollegeStudent\u001b[39;00m(Student):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/sykan/Desktop/FBA%20Quant/Quant%20Development/new%20repository/SQL_Bootcamp/Week4/FastAPI%20-%20Python.ipynb#Y221sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39mpass\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/sykan/Desktop/FBA%20Quant/Quant%20Development/new%20repository/SQL_Bootcamp/Week4/FastAPI%20-%20Python.ipynb#Y221sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m student_1 \u001b[39m=\u001b[39m CollegeStudent(\u001b[39m'\u001b[39;49m\u001b[39mEric\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mRoby\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/sykan/Desktop/FBA%20Quant/Quant%20Development/new%20repository/SQL_Bootcamp/Week4/FastAPI%20-%20Python.ipynb#Y221sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m student_2 \u001b[39m=\u001b[39m Student(\u001b[39m'\u001b[39m\u001b[39mJohn\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mMiller\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/sykan/Desktop/FBA%20Quant/Quant%20Development/new%20repository/SQL_Bootcamp/Week4/FastAPI%20-%20Python.ipynb#Y221sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mprint\u001b[39m(student_1\u001b[39m.\u001b[39mgreetings())\n",
-      "\u001b[1;31mTypeError\u001b[0m: CollegeStudent() takes no arguments"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! I am Eric Roby\n",
+      "Hello! I am John Miller\n"
      ]
     }
    ],
    "source": [
     "class Student:\n",
     "    \n",
-    "    def __init___(self, first_name, last_name):\n",
+    "    def __init__(self, first_name, last_name):\n",
+    "        self.first_name = first_name\n",
+    "        self.last_name = last_name\n",
+    "\n",
+    "    def greetings(self):\n",
+    "        return f'Hello! I am {self.first_name} {self.last_name}'\n",
+    "    \n",
+    "class CollegeStudent(Student):\n",
+    "    pass\n",
+    "\n",
+    "student_1 = CollegeStudent('Eric','Roby')   ## 주목\n",
+    "student_2 = Student('John','Miller')\n",
+    "\n",
+    "print(student_1.greetings())    #CollegeStudent의 내용물은 아무것도 없지만 Student class를 상속받아 greetings() 사용\n",
+    "print(student_2.greetings())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eric is a college student!\n",
+      "Hello! I am John Miller\n",
+      "Hello! I am John Miller\n",
+      "Doctor\n",
+      "When I grow up, I want to be a Doctor\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    \n",
+    "    def __init__(self, first_name, last_name):\n",
     "        self.first_name = first_name\n",
     "        self.last_name = last_name\n",
     "\n",
@@ -2014,14 +2040,32 @@
     "    \n",
     "class CollegeStudent(Student):\n",
     "    def __init__(self, first_name, last_name, major):\n",
+    "        super().__init__(first_name, last_name)     #super() : parent level로 이동(student)\n",
+    "                                                    #즉, CollegeStudent 클래스의 first_name, last_name은 Stuent 클래스에서 가져온다!\n",
+    "        self.major = major # 이 부분은 다시 적어야 함 / first_name, last_name은 Student에서 이미 나옴\n",
+    "\n",
+    "    def greetings(self):\n",
+    "        return f'{self.first_name} is a college student!'\n",
+    "\n",
+    "class NonCollegeStudent(Student):\n",
+    "    def __init__(self, first_name, last_name, future_adult_job):\n",
     "        super().__init__(first_name, last_name)\n",
-    "        self.major = major # 이 부분은 다시 적어야 함\n",
+    "        \n",
+    "        self.future_adult_job = future_adult_job\n",
+    "\n",
+    "    def grow_up(self):\n",
+    "        return f'When I grow up, I want to be a {self.future_adult_job}'\n",
+    "\n",
     "\n",
     "student_1 = CollegeStudent('Eric','Roby','Computer Science')\n",
     "student_2 = Student('John','Miller')\n",
+    "student_3 = NonCollegeStudent('John','Miller','Doctor')\n",
     "\n",
-    "print(student_1.greetings())\n",
-    "print(student_2.greetings())"
+    "print(student_1.greetings())    # CollegeStudent는 def에 greetings가 따로 있어 이것을 따름\n",
+    "print(student_2.greetings())\n",
+    "print(student_3.greetings())\n",
+    "print(student_3.future_adult_job)\n",
+    "print(student_3.grow_up())"
    ]
   },
   {
